--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<script src="jquery.js"></script>
-		<script src="sorcery.js"></script>
+		<script src="moteur_du_jeu.js"></script>
 		<link type="text/css" rel="stylesheet" href="style.css" />
 		<meta lang="fr" xml:lang="fr" content="text/html;charset=UTF-8" http-equiv="Content-Type">
 		<title>Sword & Sorcery</title>
