--- a/index.html
+++ b/index.html
@@ -5,115 +5,147 @@
 		<script src="moteur_du_jeu.js"></script>
 		<link type="text/css" rel="stylesheet" href="style.css" />
 		<meta lang="fr" xml:lang="fr" content="text/html;charset=UTF-8" http-equiv="Content-Type">
-		<title>Dawin Story</title>
+		<title>Sword & Sorcery</title>
 	</head>
 		
 	<body>
 		<div id="status">
-			<div class="life">
-				Life : <span class="value"></span>
+			<div class="warning">
+				Avertissements : <span class="value"></span>
 			</div>
 		</div>
 	
 		<div class="section" id="intro">
-			<h2>Bienvenue au Quizz Dawin ! </h2>
-			Êtes vous un vrai DAWIN ? 
-			
+			<h2>Etes-vous un DAWIN ?</h2>
+			Nous allons le voir bien vite...			
 			<action name="reset"/>
 			
-			<button go="wakeUp">Commencer le quizz</button>
-		</div>
-	
-		
-		<div class="section" id="wakeUp">
-			Vous arrivez au département, vous commencez part ? 
-			
-			<action name="start"/>
-			
-			<button go="screen">Direction la salle screen</button>
-			<button go="sérieux">On prend les bonnes habitudes on va réviser.</button>
-			<button go="cavern">C'est l'heure d'un cigarrette non ? </button>
-			<button go="badmove">Vous pensez déjà à sécher les cours ?</button>
-		</div>
-	
-		
-		<div class="section" id="screen">
-			Vous êtes dans une caverne sombre. La seule issue semble être
-			une porte à quelques mètres de là.
-			
-			<button go="doorLocked">Sortir</button>
-			<button go="wait">Attendre</button>
-			<button go="examine">Examiner le sol</button>
+			<button go="intro2">C'est parti !</button>
 		</div>
 
-		<div class="section" id="badmove">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis dolorem cum iure possimus, animi nisi sapiente, quibusdam, quo neque et explicabo iste alias. Saepe provident harum quasi error sequi, accusamus?
-			
-			<action name="Avertissement"/>
-			
-			<button go="doorLocked">Sortir</button>
-			<button go="wait">Attendre</button>
-			<button go="examine">Examiner le sol</button>
+		<div class="section" id="intro2">
+			<p>
+				Récemment diplômé d’un DUT Informatique, recherche choix d’orientation pour se perfectionner dans le développement web. Vous adorez bidouiller des technos, développer des solutions pour des clients, mais votre savoir-faire n’est pas assez développé.
+			</p>
+			<button go="orientationChoice">...</button>
 		</div>
+
+		<div class="section" id="orientationChoice">
+			<p>
+				Quelle formation souhaitez-vous rejoindre ?
+			</p>
+			<button go="DAWIN">LP DAWIN</button>
+			<button go="CAP">CAP Coiffure</button>
+			<button go="stopStudies">J'arrête les études</button>
+		</div>
+
+		<div class="section" id="CAP">
+			<h2>Vous n’êtes pas un DAWIN</h2>
+			<p>
+			 Cependant, personne ne pourra critiquer votre mèche rebelle.
+			</p>
+			<button go="gameOver">Game Over</button>
+		</div>
+
+		<div class="section" id="stopStudies">
+			<h2>Vous n’êtes pas un DAWIN</h2>
+			<p>
+			Cependant, vous trouverez un travail avec votre BAC+2, mais n’espérez pas vous épanouir de sitôt.. Des années d'esclavage vous attendent.
+			</p>
+			<button go="gameOver">Game Over</button>
+		</div>
+
+		<div class="section" id="DAWIN">
+			<p>
+			 Excellent choix, vous sortirez de cette formation avec de solides connaissances de développeur.
+			</p>
+			<button go="prepaMeeting">...</button>
+		</div>
+
+		<div class="section" id="prepaMeeting">
+			<p>
+			Le moment de l’entretien approche, tout va se jouer sur ces quelques minutes face au jury.
+			</p>
+			<button go="prepaMeeting2">...</button>
+		</div>
+
+		<div class="section" id="prepaMeeting2">
+			<p>
+			Comment préparez-vous cet entretien ?
+			</p>
+			<button go="selfConfident">Je suis sûr de moi et je m'en sortirais haut la main.</button>
+			<button go="paperPencil">Papier, crayon. Simple et efficace</button>
+			<button go="allRealisations">Un classeur entier rempli de vos réalisations, allant du simple FizzBuzz jusqu'à votre tout dernier projet en Symfony 3.0</button>
+		</div>
+
+		<div class="section" id="selfConfident">
+			<p>
+			"Bonjour [PRENOM], veuillez prendre place.
+			Vous semblez bien téméraire de n'avoir rien apporté..."
+			</p>
+			<button go="meeting">...</button>
+		</div>
+
+		<div class="section" id="paperPencil">
+			<p>
+			"Bonjour [PRENOM], veuillez prendre place."
+			</p>
+			<button go="meeting">...</button>
+		</div>
+
+		<div class="section" id="allRealisations">
+			<p>
+			"Bonjour [PRENOM], veuillez prendre place.
+			Savez-vous que l'entretien ne dure que 15 minutes ? C'est bien d'avoir apporté tant de choses mais cela semble disproportionné..."
+			</p>
+			<button go="meeting">...</button>
+		</div>
+
+		<div class="section" id="meeting">
+			<p>
+				L'entretien se déroule sans encombres, le jury semble à votre écoute et satisfait de vos réponses.
+				Enfin, jusqu'à la dernière question fatidique !
+			</p>
+			<button go="lastQuestion">...</button>
+		</div>
+
+		<div class="section" id="lastQuestion">
+			<p>
+				Qu'est-ce que le polymorphisme ?
+			</p>
+			<button go="endOfMeeting">Euuuuuuuh...</button>
+			<button go="endOfMeeting">Euuuuuuuh...</button>
+			<button go="endOfMeeting">Euuuuuuuh...</button>
+		</div>
+
+		<div class="section" id="endOfMeeting">
+			<p>
+			"Bien merci, ce sera tout pour nous, candidat suivant !"
+			</p>
+			<button go="doubts">...</button>
+		</div>
+
+		<div class="section" id="doubts">
+			<p>
+				Vous êtes perturbés par cette dernière question... Vous n'avez pas la moindre idée de ce concept. Peut-être que cette formation s'adresse à une certaine élite de programmeurs ? 
+				Plus que quelques jours avant les résultats.
+			</p>
+			<button go="accepted">...</button>
+		</div>
+
+		<div class="section" id="accepted">
+			<p>
+				Vous êtes acceptés ! Il semblerait que votre dernière faute n'ait pas été prise en compte par le jury. Cela était sans doute une question pour vous destabiliser.
+				Maintenant, il faut vous préparer à l'avenir. Tout commence par le choix d'un appartement.
+			</p>
+			<button go="accepted">...</button>
+		</div>
+
+
+
+
+
 	
-		
-		<div class="section" id="examine">
-			Rien de plus que des petits cailloux et de la poussière...
-		
-			<button go="doorLocked">Sortir</button>
-			<button go="wait">Attendre</button>
-		</div>
-	
-		
-		<div class="section" id="wait">
-			Vous attendez quelques minutes, mais rien ne se passe...
-			<button go="wait">Continuer à attendre</button>
-			<button go="hitWall">Se taper la tête contre le mur</button>
-			<button go="doorLocked">Sortir</button>
-			<button go="examine">Examiner le sol</button>
-		</div>
-	
-		
-		<div class="section" id="hitWall">
-			<p>Aie ! Vous perdez 1 point de vie...</p>
-			<p>Quelque chose tombe du plafond : une clé était cachée dans une
-			faille.</p>
-			
-			<action name="Avertissement"/>
-			
-			<button go="exit">Utiliser la clé et ouvrir la porte</button>
-		</div>
-		
-		
-		<div class="section" id="doorLocked">
-			Malheureusement, une porte en bois bloque le passage. Elle a l'air vraiment solide&nbsp;:
-			peu probable que vous puissiez la défoncer.
-			<button go="hitDoor">Donner un grand coup d'épaule</button>
-			<button go="cavern">Retourner sur vos pas</button>
-		</div>
-		
-		
-		<div class="section" id="hitDoor">
-			BLAM ! La porte n'a pas bougé d'un poil. Par contre, votre épaule, elle, s'est enfoncée de quelques centimètres.
-			Vous perdez 1 point de vie.
-			
-			<action name="Avertissement"/>
-			
-			<button go="hitDoor">Ré-essayer !</button>
-			<button go="cavern">Retourner sur vos pas</button>
-		</div>
-		
-		
-		<div class="section" id="exit">
-			Vous voyez la lumière du jour... Vous avez réussi à vous échapper !
-			<button go="intro">Fin</button>
-		</div>
-		
-		
-		<div class="section" id="death">
-			Vous êtes mort(e) ! C'est balot.
-			<button go="intro">Fin</button>
-		</div>
 		
 	</body>
 
