Traitement du QCM HTML

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 			</p>
 			<input type="radio" name="question1">&ltmeta encoding="text/html; charset=utf-8"&gt <br>
 			<input type="radio" name="question1">&ltmeta charset="text/html; UTF-8"&gt <br>
-			<input type="radio" name="question1" id="htmlQ1">&ltmeta charset="utf-8"&gt <br>
+			<input type="radio" name="question1" id="htmlQ1" value="ok">&ltmeta charset="utf-8"&gt <br>
 			<hr>
 
 			<p>
@@ -367,7 +367,7 @@
 			</p>
 			<input type="radio" name="question2">document.getElementsByClassName<br>
 			<input type="radio" name="question2">document.getElementsByTagName<br>
-			<input type="radio" name="question2" id="htmlQ2">document.getElementsByAttribute<br>
+			<input type="radio" name="question2" id="htmlQ2" value="ok">document.getElementsByAttribute<br>
 			<input type="radio" name="question2">document.getElementById<br>
 			<hr>
 
@@ -377,14 +377,14 @@
 			<input type="radio" name="question3">div {width: 100%; padding: 10%;} <br>
 			<input type="radio" name="question3">div {min-width: 100%;}<br>
 			<input type="radio" name="question3">div {width: 80%; padding: 10%;}<br>
-			<input type="radio" name="question3" id="htmlQ3">C'est automatique, pas besoin de spécifier une largeur.<br>
+			<input type="radio" name="question3" id="htmlQ3" value="ok">C'est automatique, pas besoin de spécifier une largeur.<br>
 			<hr>
 
 			<p>
 				4) Quel attribut correspond à une infobulle affichée au survol ?
 			</p>
 			<input type="radio" name="question4">alt<br>
-			<input type="radio" name="question4" id="htmlQ4">title<br>
+			<input type="radio" name="question4" id="htmlQ4" value="ok">title<br>
 			<input type="radio" name="question4">src<br>
 			<input type="radio" name="question4">desc<br>
 			<input type="radio" name="question4">Longdesc<br>
@@ -395,10 +395,10 @@
 
 	<div class="section" id="submitHTML">
 		<p>
-		Enregistrement de vos réponses...
+		Vos réponses ont bien été enregistrées !
 		</p>
 		<action name="checkHTML"></action>
-		<button go="htmlResults">...</button>
+		<button go="htmlResults">Voir mes résultats</button>
 	</div>
 
 	<div class="section" id="htmlResults">
