--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 			Avertissements : <span class="value"></span>
 		</div>
 	</div>
+
+	<div>
+		<img id="animDoigt" src="img/doigt.png"/>
+		<img id="animProf" src="img/prof.png"/>
+	</div>
 	
 	<div class="section" id="intro">
 		<h2>Etes-vous un DAWIN ?</h2>
