--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
 			<div class="section" id="laughWithTeacher">
 				<p>
-					Le professeur semble ravi que vous ayez "compris" sa blague, vous gagnez surement des points ! (+1 Note de C++)
+					Le professeur semble ravi que vous ayez "compris" sa blague, vous gagnez surement des points !
 				</p>
 				<action name="laughWithTeacher"></action>
 				<button go="chessProject">...</button>
@@ -524,7 +524,7 @@
 			</div>
 
 			<div class="section" id="tpGlOk">
-				<h1>Le lendemain matin...</h1>
+				<h2>Le lendemain matin...</h2>
 				<p> Aie… un TP noté de WebGL !
 					<br>
 					Heureusement que vous n’êtes pas sorti la veille !
@@ -997,7 +997,7 @@
 						Merci d'avoir joué, n'hésitez pas à retenter l'expérience, de nombreux scénarios sont à découvrir !
 					</p>
 					<action name="reset"></action>
-					<button go="intro">...</button>
+					<button go="intro">Rejouer !</button>
 				</div>
 			</div>
 			<div class="col s4">
